# paper-trail

./: .gitignore  .isort.cfg  .jscpd.json  .pylintrc  AGENTS.md  README.md  biome.json  io.github.maennlse.paper-trail.json  meson.build
.github/workflows/: super-linter.yml
data/: io.github.maennlse.paper-trail.desktop.in  io.github.maennlse.paper-trail.metainfo.xml.in  meson.build  post_install.py
papertrail/: __init__.py  __main__.py  application.py  folder_colors.py  folder_row.py  gi_helpers.py  meson.build  note_repository.py  note_row.py  paper-trail.in  popover_helpers.py  settings.py  window.py
papertrail/styles/: builder-dark.xml  builder.xml  peninsula-dark.xml  peninsula.xml
papertrail/ui/: style.css  window.ui
tests/: test_folder_colors.py  test_note_repository.py
